Resolved issues concerning responsiveness on small screens

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -74,7 +74,6 @@ body{
 	max-height:$percentage;
 	min-height: 40px;
 	margin-bottom: 40px;
-	overflow-x: $car;
 }
 
 #preview{
@@ -83,7 +82,6 @@ body{
 	border-radius: .25rem;
 	border: 1px solid #ced4da;
 	overflow-y: $car;
-	overflow-x: $car;
 	max-height:$percentage;
 	min-height: 40px;
 	margin-bottom: 40px;
@@ -100,6 +98,7 @@ body{
 	background-color: #fcf8e3;
 	min-height: 50px;
 	border-bottom: none;
+	padding-top: 10px;
 }
 
 .insignia{
@@ -201,4 +200,24 @@ blockquote{
 	border-left: 2px solid black;
 	padding-left: 5px;
     margin-left: 25px;
+}
+
+@media only screen and (max-width: 768px) {
+    img{
+		width: 100%;
+	}
+	
+	#ggED{
+		text-align: left;
+	}
+
+	#ggPrev{
+		text-align: right;
+	}
+	
+	.insignia, .insignia:hover{
+		letter-spacing: 0px;
+		font-size: 1em;
+	}
+	
 }
